<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Java5774</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_order_list">OrderList</string>
    <string name="title_activity_order">Order</string>
    <string name="title_activity_order_summary">OrderSummary</string>
    <string name="title_activity_new_account">NewAccount</string>
    <string name="add_update_component">Add/Update component</string>
    <string name="title_activity_component_add_update">ComponentAddUpdate</string>
    <string name="title_activity_add_component">AddComponent</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_addcomponent">Addcomponent</string>
    <string name="title_activity_component_list">ComponentList</string>
    <string name="title_activity_bill">BillActivity</string>
    <string name="amount">Amount</string>
    <string name="price_per_unit">Price per unit</string>
    <string name="add">Add</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="total_price_">Total price:</string>
    <string name="total">Total</string>
    <string name="add_new">Add new</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_apos_t_have_a_user_">Don\'t have a user?</string>
    <string name="user_id">User ID</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="id">ID</string>
    <string name="email">Email</string>
    <string name="add_new_account">Add new account</string>
    <string name="filter">Filter</string>
    <string name="summary">Summary</string>
    <string name="list_of_component">List of component</string>
    <string name="bill">Bill</string>
    <string name="button">Button</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="create_date">Create Date</string>
    <string name="assigned_to">Assigned To</string>
    <string name="order_id">Order ID</string>
    <string name="phone_number">Phone number</string>
    <string name="finish_date">Finish Date</string>
    <string name="status">Status</string>
    <string name="serial_number">serial number</string>
    <string name="name">name</string>
    <string name="date">Date</string>
    <string name="insert_work_details">Insert work details</string>
    <string name="go_back">GO BACK</string>
    <string name="start_time">Start time</string>
    <string name="hours">Hours</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_working_time">Working Times</string>
    <string name="title_activity_signature">SignatureActivity</string>
    <string name="working_hours_">Working hours: </string>
    <string name="signature">Signature</string>
    <string name="back">Back</string>
    <string name="login_page">Login Page</string>
    <string name="don_t_have_a_user_">Don\'t have a user?</string>
    <string name="city">City</string>
    <string name="add_component">Add component</string>
    <string name="technician_port_">Technician port:</string>
    <string name="insert_details">Insert details</string>
    <string name="order_is_closed">The action is done. You can only read the information, but not change it.</string>
    <string name="done">Done</string>
    <string name="clear">clear</string>

</resources>