<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OrderNavigation" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/summarySaveButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:background="@drawable/button_shape"
            style="@style/button_text" />

        <Button
            android:id="@+id/addComponentButton"
            style="@style/button_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:text="Add component" />

        <Button
            android:id="@+id/componentListButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_of_component"
             android:background="@drawable/button_shape"
            style="@style/button_text" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bill"
             android:background="@drawable/button_shape"
            style="@style/button_text" />

        <Button
            android:id="@+id/workDetailsButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/insert_work_details"
             android:background="@drawable/button_shape"
            style="@style/button_text" />

        <Button
            android:id="@+id/returnToOrderList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
             android:background="@drawable/button_shape"
            style="@style/button_text" />
    </LinearLayout>

</RelativeLayout>