<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00AA00"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/filterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="30dp"
            android:text="@string/user_id"
            android:textAppearance="@android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/filterOrders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="34dp"
            android:layout_marginTop="10dp"
            android:background="#00D000"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="50dp"
            android:text="@string/password"
            android:textAppearance="@android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/passwordUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            android:background="#00D000"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/logButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="30dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/addNewAccount"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="25dp"
            android:text="@string/don_apos_t_have_a_user_" />
    </LinearLayout>

</RelativeLayout>